# textualMD

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  TODO.md  app.py  example.md  main.py  pyproject.toml  requirements.txt  test_bullets.md  test_checkbox.md  test_mermaid.md
.cursor/rules/: context7.mdc
services/: __init__.py  export_manager.py  file_manager.py  file_watcher.py  markdown_processor.py  search_engine.py
src/textualmd/: __init__.py  app.py  app_types.py  constants.py  main.py
src/textualmd/services/: export_manager.py  file_manager.py  file_watcher.py  markdown_processor.py  search_engine.py
src/textualmd/ui/: __init__.py  bindings.py  styles.py  widgets.py
ui/: styles.py  widgets.py
